--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+          <% if current_user %>
+        Logged in as <%= current_user.username %>.
+        <%= link_to 'Log Out', logout_path %>
+      <% else %>
+        <%= link_to 'Sign Up', signup_path %> or 
+        <%= link_to 'Log In', login_path %>
+      <% end %>
   </head>
 
   <body>
