--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<%= javascript_pack_tag 'index' %>
+
+<div>
+    <h3>React version (not working)</h3>
+    <%= javascript_pack_tag 'index' %>
+</div>  
