--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <h3>Rails Version (working)</h3>
     <% if current_user %>
         Logged in as <%= current_user.username %>.
         <%= link_to 'Log Out', logout_path %>
